--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ nav ul li{
 
 @media only screen and (max-width: 1100px) {
     body {
-      background-color: red;
+      background-color: rgb(13, 15, 104);
     }
     .container {
         width: fit-content;
